--- a/static/styles/site/style.scss
+++ b/static/styles/site/style.scss
@@ -2,9 +2,15 @@
 // ============================================================ //
 // ============================================================ //
 
-$primary: #F03838;
-$secondary: #303030;
-$background: #FEFEFE;
+$primary-light: #F03838;
+$secondary-light: #303030;
+$background-light: #FEFEFE;
+
+$primary-dark: #F03838;
+$secondary-dark: #FEFEFE;
+$background-dark: #333333;
+
+
 
 /* ============================================================ */
 /* Base */
@@ -13,7 +19,7 @@ $background: #FEFEFE;
 html, body { height: 100%; }
 
 body {
-    background: $background;
+    background: $background-light;
     color: #424242;
     font-family: "Open Sans", arial, sans-serif;
     font-size: 18px;
@@ -37,7 +43,7 @@ p {
 }
 
 a {
-    color: $primary;
+    color: $primary-light;
     text-decoration: none;
 }
 
@@ -55,7 +61,7 @@ ul, ol {
 }
 
 blockquote {
-    border-left: 1px dotted $primary;
+    border-left: 1px dotted $primary-light;
     margin: 40px 0;
     padding: 5px 30px;
 
@@ -188,7 +194,7 @@ table {
 }
 
 .button {
-    background: $secondary;
+    background: $secondary-light;
     border: none;
     border-radius: 3px;
     color: #FEFEFE;
@@ -197,18 +203,18 @@ table {
     padding: 10px 12px;
     text-transform: uppercase;
 
-    &:hover { background: $primary; }
+    &:hover { background: $primary-light; }
 }
 
 .button-square {
-    background: $primary;
+    background: $primary-light;
     color: #FFF;
     float: left;
     font-size: 17px;
     margin: 0 0 0 10px;
     padding: 3px 8px 4px;
 
-    &:hover { background: $secondary; }
+    &:hover { background: $secondary-light; }
 }
 
 .error {
@@ -244,11 +250,11 @@ table {
 
     a {
         float: left;
-        background: $primary;
+        background: $primary-light;
         color: #FEFEFE;
         padding: 5px 10px 6px;
 
-        &:hover { background: $secondary; }
+        &:hover { background: $secondary-light; }
     }
 }
 .site-logo {
@@ -281,7 +287,7 @@ table {
 .post-container { margin: 0 40px; }
 
 .post-header {
-    border-bottom: 6px solid $secondary;
+    border-bottom: 6px solid $secondary-light;
     margin: 0 0 20px;
     padding: 0 0 20px;
     text-align: center;
@@ -309,12 +315,12 @@ table {
     margin: 25px 0 0;
 
     a { color: #AEADAD; }
-    a:hover { color: $primary; }
+    a:hover { color: $primary-light; }
 }
 
 .post-line {
     &:after {
-        border-bottom: 1px dotted $secondary;
+        border-bottom: 1px dotted $secondary-light;
         content: "";
         display: block;
         margin: 40px auto 0;
@@ -324,7 +330,7 @@ table {
 
 .post-content {
     a:hover {
-        border-bottom: 1px dotted $primary;
+        border-bottom: 1px dotted $primary-light;
         padding: 0 0 2px;
     }
 
@@ -359,14 +365,14 @@ table {
 .post-tags {
     float: left;
     margin: 3px 0 0;
-    a:hover { color: $secondary; }
+    a:hover { color: $secondary-light; }
 }
 
 .share {
     float: right;
 
     a {
-        background: $primary;
+        background: $primary-light;
         color: #FFF;
         display: inline-block;
         font-size: 16px;
@@ -376,7 +382,7 @@ table {
         text-align: center;
     }
 
-    a:hover { background: $secondary; }
+    a:hover { background: $secondary-light; }
 }
 
 .post-navigation {
@@ -387,7 +393,7 @@ table {
 .newer-posts,
 .older-posts {
     float: left;
-    background: $primary;
+    background: $primary-light;
     color: #FEFEFE;
     font-size: 14px;
     font-weight: 600;
@@ -396,7 +402,7 @@ table {
     text-transform: uppercase;
 
     &:hover {
-        background: $secondary;
+        background: $secondary-light;
     }
 }
 
@@ -412,7 +418,7 @@ table {
 }
 
 .post-stub {
-    border-bottom: 1px dotted $secondary;
+    border-bottom: 1px dotted $secondary-light;
     margin: 0;
     position: relative;
 
@@ -428,16 +434,16 @@ table {
 
         &:hover {
             background: #FCF5F5;
-            color: $primary;
+            color: $primary-light;
             padding: 20px 12px;
 
-            .post-stub-tag { background: $primary; }
+            .post-stub-tag { background: $primary-light; }
         }
     }
 }
 
 .post-stub-tag {
-    background: $secondary;
+    background: $secondary-light;
     border-radius: 3px;
     color: #FFF;
     float: right;
@@ -479,7 +485,7 @@ table {
     margin: 0 40px;
 
     &:after {
-        border-bottom: 1px dotted $secondary;
+        border-bottom: 1px dotted $secondary-light;
         content: "";
         display: block;
         margin: 40px auto 0;
@@ -528,7 +534,7 @@ table {
     i { margin-right: 8px; }
 
     a { color: #AEADAD; }
-    a:hover { color: $primary; }
+    a:hover { color: $primary-light; }
 }
 
 .author-bio {
@@ -542,7 +548,7 @@ table {
 /* ============================================================ */
 
 .footer {
-    background: $secondary;
+    background: $secondary-light;
     color: #D3D3D3;
     height: 265px;
     margin-top: 95px;
@@ -575,13 +581,13 @@ table {
 /* NProgress */
 /* ============================================================ */
 
-#nprogress .bar { background: $primary; }
+#nprogress .bar { background: $primary-light; }
 
-#nprogress .peg { box-shadow: 0 0 10px $primary, 0 0 5px $primary; }
+#nprogress .peg { box-shadow: 0 0 10px $primary-light, 0 0 5px $primary-light; }
 
 #nprogress .spinner-icon {
-    border-top-color: $primary;
-    border-left-color: $primary;
+    border-top-color: $primary-light;
+    border-left-color: $primary-light;
 }
 
 /* ============================================================ */
