Improving dark (side) mode

--- a/static/styles/site/style.scss
+++ b/static/styles/site/style.scss
@@ -22,8 +22,10 @@ $blog-description-light: #AEADAD;
 $blog-description-a-light: #AEADAD;
 $post-tags-share-light: #AEADAD;
 $share-a-light: #FFF;
+$newer-older-posts-light: #FEFEFE;
 $post-stub-a-light: #424242;
 $post-stub-a-hover-light: #FCF5F5;
+$post-stub-tag-light: #FFF;
 $author-meta-light: #AEADAD;
 $author-meta-a-light: #AEADAD;
 $footer-background-text-light: #D3D3D3;
@@ -33,7 +35,7 @@ $footer-copyright-a-light: #656565;
 $footer-copyright-a-hover-light: #FEFEFE;
 
 $primary-dark: #F03838;
-$secondary-dark: #FEFEFE;
+$secondary-dark: #AEADAD;
 $background-dark: #333333;
 $text-dark: #FEFEFE;
 $blockquote-p-dark: #AEADAD;
@@ -51,13 +53,15 @@ $site-nav-item-hover-dark: #424242;
 $blog-description-dark: #AEADAD;
 $blog-description-a-dark: #AEADAD;
 $post-tags-share-dark: #AEADAD;
+$newer-older-posts-dark: #FEFEFE;
 $share-a-dark: $background-dark;
 $post-stub-a-dark: $text-dark;
 $post-stub-a-hover-dark: #FCF5F5;
+$post-stub-tag-dark: #000;
 $author-meta-dark: #AEADAD;
 $author-meta-a-dark: #AEADAD;
 $footer-background-text-dark: #D3D3D3;
-$footer-button-square-hover-dark: #AEADAD;
+$footer-button-square-hover-dark: $secondary-dark;
 $footer-copyright-dark: #656565;
 $footer-copyright-a-dark: #656565;
 $footer-copyright-a-hover-dark: #FEFEFE;
@@ -446,7 +450,7 @@ table {
 .older-posts {
     float: left;
     background: $primary-light;
-    color: #FEFEFE;
+    color: $newer-older-posts-light;
     font-size: 14px;
     font-weight: 600;
     margin: 0 5px;
@@ -497,7 +501,7 @@ table {
 .post-stub-tag {
     background: $secondary-light;
     border-radius: 3px;
-    color: #FFF;
+    color: $post-stub-tag-light;
     float: right;
     font-size: 10px;
     margin: 7px 0 0;
@@ -872,8 +876,8 @@ table {
 }
 
 ::-moz-selection {
-    background: $selection-background-light;
-    color: $selection-color-light;
+    background: $selection-background-dark;
+    color: $selection-color-dark;
     display: block;
 }
 
@@ -890,6 +894,7 @@ table {
 }
 
 .site-title {
+
     a {
         background: $primary-dark;
         color: $site-title-a-dark;
@@ -898,7 +903,7 @@ table {
 }
 
 .post-header {
-    border-bottom: 6px solid $secondary-dark;
+    border-bottom: 6px solid $primary-dark;
 }
 
 .blog-description {
@@ -910,13 +915,13 @@ table {
 
 .post-line {
     &:after {
-        border-bottom: 1px dotted $secondary-light;
+        border-bottom: 1px dotted $secondary-dark;
     }
 }
 
 .post-content {
     a:hover {
-        border-bottom: 1px dotted $primary-light;
+        border-bottom: 1px dotted $primary-dark;
     }
 }
 
@@ -941,7 +946,7 @@ table {
 .newer-posts,
 .older-posts {
     background: $primary-dark;
-    color: #FEFEFE;
+    color: $newer-older-posts-dark
 
     &:hover {
         background: $secondary-dark;
@@ -949,7 +954,7 @@ table {
 }
 
 .post-stub {
-    border-bottom: 1px dotted $secondary-dark;
+    border-bottom: 1px dotted $primary-dark;
 
     a {
         color: $post-stub-a-dark;
@@ -965,7 +970,7 @@ table {
 
 .post-stub-tag {
     background: $secondary-dark;
-    color: #000;
+    color: $post-stub-tag-dark;
 }
 
 .author-profile {
@@ -982,9 +987,10 @@ table {
 }
 
 .footer {
-    background: $secondary-dark;
+    background: #000;
     color: $footer-background-text-dark;
 
+    .site-title a:hover,
     .button-square:hover {
         background: $footer-button-square-hover-dark;
     }
